--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -1,24 +1,48 @@
 .error {
     color: #FF6060;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 100vw;
-    height: 60vh;
+    height: 80vh;
+    margin-bottom: 250px;
 }
 
 .error>h1 {
-    font-size: 280px;
+    font-size: 90px;
+    margin-top: 150px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 .error>p {
-    font-size: 36px;
+    font-size: 18px;
     color: #FF6060;
+    margin-bottom: 150px;
+    text-align: center;
+    margin-inline: 10px;
 }
 
 .link-style {
     margin-top: 100px;
-    font-size: 18px;
+    font-size: 9px;
     color: #FF6060;
+    margin-left: calc(50% - 70px);
+}
+
+@media (min-width: 768px) {
+    .error>h1 {
+        font-size: 280px;
+        margin-block: 60px;
+    }
+
+    .error>p {
+        font-size: 36px;
+        margin-bottom: 250px;
+        margin-inline: 0px;
+    }
+    
+    .link-style {
+        margin-top: 100px;
+        font-size: 18px;
+        margin-left: calc(50% - 140px);
+    }
+    
 }
