--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,19 +3,44 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 80px;
+    margin: 10px 20px;
+}
+
+.header>img {
+    width: 90px;
 }
 
 .link-style-header {
     margin-right: 30px;
-    font-size: 24px;
+    font-size: 12px;
     color: #FF6060;
     text-decoration: none;
 }
 
 .link-style-header-active {
     margin-right: 30px;
-    font-size: 24px;
+    font-size: 12px;
     color: #FF6060;
     text-decoration: underline;
+}
+
+@media (min-width: 768px) {
+    .header {
+        margin: 20px 80px;
+    }
+
+    .header>img {
+        width: 210px;
+    }
+
+    .link-style-header {
+        margin-right: 30px;
+        font-size: 24px;
+    }
+    
+    .link-style-header-active {
+        margin-right: 30px;
+        font-size: 24px;
+    }
+    
 }
