--- a/src/styles/Accommodation.css
+++ b/src/styles/Accommodation.css
@@ -1,12 +1,8 @@
-#about-banner {
+.description, .equipement {
     margin-bottom: 20px;
 }
 
-.fiabilite, .respect, .service, .securite {
-    margin-bottom: 20px;
-}
-
-.fiabilite>div, .respect>div, .service>div, .securite>div{
+.description>div, .equipement>div {
     height: 30px;
     width: 300px;
     border-radius: 4px;
@@ -20,7 +16,7 @@
     margin: auto;
 }
 
-.fiabilite img, .respect img, .service img, .securite img {
+.description img, .equipement img {
     width: 16px;
 }
 
@@ -53,7 +49,7 @@
 }
 
 @media (min-width: 1024px) {
-    .about>div>div {
+    .accommodation-info>div>div {
         width: 1000px;
     }
 
