--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,11 +1,12 @@
 .card {
     position: relative;
-    width: 340px;
+    width: 90%;
     max-width: 340px; 
-    height: 340px;
+    height: 300px;
     overflow: hidden; 
     margin: auto;
     border-radius: 10px;
+    margin-top: 30px;
 }
 
 .card>div {
@@ -19,9 +20,17 @@
     justify-content: flex-start;
     align-items: flex-end;
 }
-.card>div>h2 {
+.card>div>p {
     color: #FFFFFF;
     font-size: 18px;
     width: 110px;
     margin-left: 15px;
+    padding-bottom: 10px;
+}
+
+@media (min-width: 768px) {
+    .card {
+        width: 310px;
+        height: 310px;
+    }
 }
