--- a/src/styles/Accommodation.css
+++ b/src/styles/Accommodation.css
@@ -8,6 +8,7 @@
     width: 92%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     color: #FF6060;
 }
@@ -15,7 +16,13 @@
 .accommodation-preview>div {
     display: flex;
     flex-direction: column;
-    margin-block: 20px;
+}
+
+.accommodation-preview>div:last-child {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .accommodation-preview>div>h2 {
@@ -45,6 +52,9 @@
     flex-direction: row;
     margin-top: 10px;
 }
+.tags {
+    flex-wrap: wrap;
+}
 
 .tags>li {
     color: #F6F6F6;
@@ -52,6 +62,7 @@
     border-radius: 10px;
     padding: 5px 25px;
     margin-right: 10px;
+    margin-bottom: 8px;
 }
 
 /*  -----  Accommodation-info  -----  */
@@ -87,7 +98,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-inline: 10px;
+    padding-inline: 5px;
     padding-block: 20px;
     margin: auto;
 }
@@ -106,12 +117,44 @@
     transform: rotate(0deg);
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 760px) {
     .accommodation-info>div>div {
-        width: 1000px;
+        width: 700px;
     }
 
     .open {
-        width: 1000px;
+        width: 700px;
     }
+    .accommodation-preview>div {
+        margin-block: 20px;
+    }
+
+    .accommodation-preview>div:last-child {
+        display: flex;
+        flex-direction: column;
+        margin-block: 20px;
+        width: auto;
+    }
+}
+
+@media (min-width: 1024px) {
+    .accommodation-info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 92%;
+    }
+    .accommodation-info>div {
+        width: 45%;
+    }
+    .accommodation-info>div>div {
+        width: 100%;
+        padding-block: 10px;
+    }
+
+    .open {
+        width: 100%;
+        padding-inline: 5px;
+    }
+
 }
