--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,4 +1,3 @@
-
 .banner {
     position: relative;
     width: 90%;
@@ -35,6 +34,7 @@
 @media (min-width: 768px) {
     .banner>img {
         max-width: 100%;
+        width: 100%;
         height: auto;
         display: block;
         margin-top: -250px;
